--- a/index.qmd
+++ b/index.qmd
@@ -3,6 +3,7 @@ title: "GNU Health"
 subtitle: "Medizinische Informatik"
 date: now
 date-format: "D. MMMM YYYY"
+lightbox: true
 format:
   revealjs:
     multiplex: true
@@ -17,23 +18,6 @@ format:
     theme: serif
     template-partials:
         - title-slide.html
-    include-in-header:
-      - text: |
-          <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js""></script>
-          <script type="text/javascript">
-            $(document).ready(function() {
-              $('body').prepend('<div class=\"zoomDiv\"><img src=\"\" class=\"zoomImg\"></div>');
-              // onClick function for all plots (img's)
-              $('img:not(.zoomImg)').click(function() {
-                $('.zoomImg').attr('src', $(this).attr('src')).css({width: '100%'});
-                $('.zoomDiv').css({opacity: '1', width: 'auto', border: '1px solid white', borderRadius: '5px', position: 'fixed', top: '50%', left: '50%', marginRight: '-50%', transform: 'translate(-50%, -50%)', boxShadow: '0px 0px 50px #888888', zIndex: '50', overflow: 'auto', maxHeight: '100%'});
-              });
-              // onClick function for zoomImg
-              $('img.zoomImg').click(function() {
-                $('.zoomDiv').css({opacity: '0', width: '0%'});
-              });
-            });
-          </script>
 revealjs-plugins:
   - attribution
 resources:
@@ -281,25 +265,19 @@ Ergebnis sichtbar in Datei und im Log im Dashboard
 ![](images/mirth/conversion/8.png)
 
 ##  Nachricht von VM1 an VM2
+##
 :::header 
 ✨Bonusaufgabe✨
 :::
 
-::: {.columns}
+::: {layout-ncol=2}
+![](images/mirth/cross-vm/1.png){width=380}
 
-::: {.column width="50%"}
-![](images/mirth/cross-vm/1.png)
-
-:::
-
-::: {.column width="50%"}
-![](images/mirth/cross-vm/2.png)
-
-:::
+![](images/mirth/cross-vm/2.png){width=380}
 :::
 
 
 
 ## Nachricht von VM1 an VM2
 
-![](images/mirth/cross-vm/3.png)
+![](images/mirth/cross-vm/3.png){width=800}
